# iterate-text

./: .travis.yml  Cargo.toml
.github/: README.md
examples/file-reader/: main.rs
src/: lib.rs
src/file/: characters.rs  lines.rs
src/string/: characters.rs  lines.rs
tests/: tests.rs
tests/file/characters/: from_buf_reader.rs  from_file.rs  path.rs
tests/file/lines/: from_buf_reader.rs  from_file.rs  path.rs
tests/string/characters/: mod.rs
tests/string/lines/: mod.rs
