[package]
name = "iterate-text"
version = "0.0.1"
authors = ["S0AndS0 <strangerthanbland@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
description = "Library of helper functions and structures for iterating over text files"
homepage = "https://github.com/rust-utilities/iterate-text"
readme = ".github/README.md"
repository = "https://github.com/rust-utilities/iterate-text"
keywords = [ "iterate", "file", "characters", "lines" ]
categories = [ "filesystem", "parsing", "text-processing" ]


exclude = [ "*" ]

include = [
  "**/*.rs",
  "Cargo.toml",
  ".github/README.md",
  "LICENSE",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]


[dev-dependencies]
argparse = "0.2.2"
regex = "1"
